--- a/HMWRK/FinalProj/stylesheet.css
+++ b/HMWRK/FinalProj/stylesheet.css
@@ -21,7 +21,7 @@ body{
 .flexbox-container{
     height: 100%;
     display: flex; 
-    justify-content: space-around;
+    justify-content: center;
     align-items: stretch;
     flex-direction: row;    
 }
@@ -38,7 +38,7 @@ body{
     /* display: grid; */
 }
 .flexbox-item-1{
-    min-height: 500px;
+    min-height: 100px;
     
 }
 .flexbox-item-2{
@@ -144,6 +144,7 @@ background-repeat: no-repeat;
 color: skyblue;
 text-shadow: black 0.3em 0.3em 0.3em;
 font-size: 50px;
+margin: 0px;
 }
 
 .jumbotron4 h1,
